--- a/docker_compose.yml
+++ b/docker_compose.yml
@@ -8,6 +8,7 @@ services:
       - FLASK_ENV=development
       - FLASK_APP=app.py
       - OAUTHLIB_INSECURE_TRANSPORT=1
+      - DOCKER_ENV=True
       - DATABASE_URL=postgresql://admin:admin@db:5432/todos
       - GITHUB_OAUTH_CLIENT_ID=${GITHUB_OAUTH_CLIENT_ID}
       - GITHUB_OAUTH_CLIENT_SECRET=${GITHUB_OAUTH_CLIENT_SECRET}
